# safetyware-api

./: README.md  api.Dockerfile  docker-compose.yml
.github/workflows/: format.yml  lint.yml  ps-lint.yml
api/: Cargo.toml
api/func/: .gitignore  host.json  local.settings.json
api/src/: auth.rs  common.rs  crockford.rs  db.rs  graphql.rs  image.rs  lib.rs  main.rs  settings.rs  warp_ext.rs
api/src/blackline/: import.rs
api/src/db/: company.rs
api/src/graphql/: company.rs  device.rs  gas_reading.rs  incident.rs  incident_stats.rs  location_reading.rs  mod.rs  person.rs  team.rs  user_account.rs
api/src/repo/: company.rs  device.rs  filter_util.rs  gas_reading.rs  incident.rs  incident_stats.rs  location_reading.rs  mem_op.rs  memory_op.rs  mod.rs  mongo_common.rs  mongo_op.rs  mongo_util.rs  op.rs  person.rs  team.rs  user_account.rs
api/src/rest/: mod.rs
api/src/v1/: companies.rs  location_reading.rs  location_readings.rs  mod.rs  op.rs  people.rs
api/tests/: main.rs
api/tests/db/: company.rs  mod.rs
api/tests/graphql/: company.rs  mod.rs
api/tests/repo/: company.rs  location_reading.rs  mod.rs  mongo_op.rs
doc/: config.yml
doc/public/: index.html
infrastructure/: azuredeploy.bicep  function.bicep
postman/: API.postman_collection.json  dev.postman_environment.json  docker.postman_environment.json  local.postman_environment.json
script/: LoadSampleData.ps1  Publish.ps1  PublishApi.ps1  PublishDatabase.ps1  RunApiFunc.ps1  SaveSampleData.ps1  Test.ps1  Unpublish.ps1  Util.psm1
