[package]
name = "api"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "api"
test = false

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
async-trait = "0.1"
base32 = "0.4"
bson = { version = "2.1", features = ["chrono-0_4"] }
chrono = { version = "0.4", features = ["serde"] }
config = "0.11"
env_logger = "0.9"
futures-util = "0.3"
log = "0.4"
mongodb = "2.1"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.15", features = ["full"] }
warp = "0.3"

[dev-dependencies]
serde_json = "1.0"
